@@ -23,9 +23,9 @@ plugins {
   id 'eclipse'
   id 'idea'
   id 'jacoco'
-  id 'com.github.spotbugs' version '1.6.3'
-  id 'org.jetbrains.kotlin.jvm' version '1.3.10'
-  id 'org.jetbrains.kotlin.plugin.spring' version '1.3.10'
+  id 'com.github.spotbugs' version '2.0.1'
+  id 'org.jetbrains.kotlin.jvm' version '1.3.50'
+  id 'org.jetbrains.kotlin.plugin.spring' version '1.3.50'
 }
 
 description = "Neuron Server"
@@ -62,6 +62,15 @@ if( N_ARGS == 'null' || N_ARGS == null || N_ARGS == "" ) {
 println "Using java args for running ${projectName}: Xms=" + N_XMS + ",Xmx=" + N_XMX + " -server"
 
 applicationDefaultJvmArgs = [N_XMS, N_XMX, "-server"]
+
+applicationDefaultJvmArgs += [ "--add-modules", "java.se",
+                               "--add-exports","java.base/jdk.internal.ref=ALL-UNNAMED",
+                               "--add-opens","java.base/java.lang=ALL-UNNAMED",
+                               "--add-opens","java.base/java.nio=ALL-UNNAMED",
+                               "--add-opens","java.base/sun.nio.ch=ALL-UNNAMED",
+                               "--add-opens","java.management/sun.management=ALL-UNNAMED",
+                               "--add-opens","jdk.management/com.sun.management.internal=ALL-UNNAMED"]
+
 sourceCompatibility=JavaVersion.VERSION_11
 targetCompatibility=JavaVersion.VERSION_11
 
@@ -82,6 +91,11 @@ configurations {
 
 ext.odata_version='4.2.0'
 dependencies {
+    spotbugsPlugins "com.h3xstream.findsecbugs:findsecbugs-plugin:${findsecbugs_version}"
+    compileOnly "net.jcip:jcip-annotations:${jcip_version}"
+    compileOnly "com.github.spotbugs:spotbugs-annotations:${spotbugs_annotations_version}"
+    testCompileOnly "net.jcip:jcip-annotations:${jcip_version}"
+    testCompileOnly "com.github.spotbugs:spotbugs-annotations:${spotbugs_annotations_version}"
 
     if ( project.hasProperty('developmentMode') && project.developmentMode ) {
         logger.quiet(project.name + " using project dependencies.")
@@ -118,6 +132,27 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
 
+tasks.withType(JavaCompile) {
+    options.compilerArgs+= [ "--add-modules", "java.se",
+                             "--add-exports","java.base/jdk.internal.ref=ALL-UNNAMED",
+                             "--add-opens","java.base/java.lang=ALL-UNNAMED",
+                             "--add-opens","java.base/java.nio=ALL-UNNAMED",
+                             "--add-opens","java.base/sun.nio.ch=ALL-UNNAMED",
+                             "--add-opens","java.management/sun.management=ALL-UNNAMED",
+                             "--add-opens","jdk.management/com.sun.management.internal=ALL-UNNAMED"]
+}
+
+tasks.withType(Test) {
+    jvmArgs += [ "--add-modules", "java.se",
+                 "--add-exports","java.base/jdk.internal.ref=ALL-UNNAMED",
+                 "--add-opens","java.base/java.lang=ALL-UNNAMED",
+                 "--add-opens","java.base/java.nio=ALL-UNNAMED",
+                 "--add-opens","java.base/sun.nio.ch=ALL-UNNAMED",
+                 "--add-opens","java.management/sun.management=ALL-UNNAMED",
+                 "--add-opens","jdk.management/com.sun.management.internal=ALL-UNNAMED"]
+}
+
+
 eclipse {
     ext.downloadSources = true
     ext.downloadJavadoc = true
@@ -129,6 +164,7 @@ eclipse {
 compileKotlin {
     kotlinOptions {
         jvmTarget = "1.8"
+        freeCompilerArgs += '-Xjvm-default=compatibility'
     }
 }
 compileTestKotlin {
